--- a/resources/sass/common/_variables.scss
+++ b/resources/sass/common/_variables.scss
@@ -11,6 +11,7 @@ $body-bg: #f8fafc;
 
 // Top Navigation
 $top-navbar-height: 80px;
+$top-navbar-height-mobile: 50px;
 $top-navigation-bar-height: 60px;
 
 // Wrapper
